--- a/Application/Home/View/Public/person_nav.html
+++ b/Application/Home/View/Public/person_nav.html
@@ -1,7 +1,7 @@
     <div id="header">
     	<div id="header_box">
     		<a href="__ROOT__">
-    			<img src="__PUBLIC__/images/背景.png" alt="">
+    			<img src="__PUBLIC__/images/background.png" alt="">
     		</a>
     		<a class="index" href="__ROOT__">回到首页</a>
     	</div>
