--- a/Application/Master/View/Index/index.html
+++ b/Application/Master/View/Index/index.html
@@ -29,7 +29,7 @@
 	<div class="container-fluid">
 		<div id="header" class="page-header">
 			<h1><small>后台管理</small></h1>
-			<a href="__ROOT__" target="_self">去前台</a>
+			<a href="{:U(''Home/Index/index)}" target="_self">去前台</a>
 		</div>
 		<div class="row" id="main">
 			<div class="col-md-3 col-lg-2 col-sm-3 col-xs-4">
