commit for debug of master index

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -3,6 +3,8 @@
 <head>
     <!-- create by cm -->
     <meta charset="utf-8"> 
+    <meta name="keywords" content="张家港,工程,项目,协同创新服务平台">
+    <meta name="description" content="....">
     <script src="__PUBLIC__/js/jquery.js"></script>
     <link href="__PUBLIC__/css/home/index.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
