finsh a bug of signup_person

--- a/Application/Home/View/Signup/signup_person.html
+++ b/Application/Home/View/Signup/signup_person.html
@@ -39,8 +39,8 @@
                 <input class="line-input" type="text" required id="phone" name="phone" placeholder="例:13866665666"><span id="phoneError" class="must">*</span>
             </div>
             <div class="line">
-                <label for="realname">邮箱</label>
-                <input class="line-input" type="email" required id="realname" name="realname"><span class="must">*</span>
+                <label for="email">邮箱</label>
+                <input class="line-input" type="email" required id="email" name="email"><span class="must">*</span>
             </div>
             <div class="sub">
                 <input type="submit" value="提交">
