--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -3,8 +3,6 @@
 <head>
     <!-- create by cm -->
     <meta charset="utf-8"> 
-   <!--  <meta name="keywords" content="张家港,工程,项目,协同创新服务平台">
-    <meta name="description" content="...."> -->
     <script src="__PUBLIC__/js/jquery.js"></script>
     <link href="__PUBLIC__/css/home/index.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
@@ -19,7 +17,7 @@
                 position: absolute;
                 left: 50%;
                 margin-left: -65px;
-                top: 350px;
+                top: 270px;
             }
 
             .control-btn{
@@ -33,21 +31,6 @@
             .focus{
                 background: blue;
             }
-            .columnbtn{
-                float:left; 
-                width:25px; 
-                height:25px; 
-                line-height:25px; 
-                text-align:center; 
-                color:#fff; 
-                font-weight:bold;
-                cursor: pointer;
-                background: #000;
-                opacity: 0.8;
-            }
-            .columnpicture .columnpicture_hover{
-                background: red;
-            }
         </style>
     <!-- [endif] -->
 </head>
@@ -57,9 +40,9 @@
     <div id="banner-show">
         <div id="banner-container">
             <ul>
-                <li index="0"><img src="__PUBLIC__/images/banner.png" alt=""></li>
-                <li index="1"><img src="__PUBLIC__/images/banner2.png" alt=""></li>
-                <li index="2"><img src="__PUBLIC__/images/banner3.png" alt=""></li>
+                <li index="0"><img src="__PUBLIC__/images/banner_300_1.png" alt=""></li>
+                <li index="1"><img src="__PUBLIC__/images/banner_300_2.png" alt=""></li>
+                <li index="2"><img src="__PUBLIC__/images/banner_300_3.png" alt=""></li>
             </ul>
         </div>
         <div class="control">
@@ -68,56 +51,84 @@
             <div class="control-btn"></div>
         </div>
     </div>
-    <div class="newsbox">
-    	<div class="news">
-            <div class="newstitle">新闻动态：</div>
-            <div class="newstext">
-            	<p><a href="#">浙江惊现连体巨无霸建筑 型如UFO</a></p>
-                <p><a href="#">第六届全国中、高等院校“斯维尔杯”BIM大赛总决赛圆满落幕</a></p>
-                <p><a href="#">是什么推动了螺旋钢管市场的回暖？</a></p>
-                <p><a href="#">再制造为锤式破碎机厂带来的发展机遇</a></p>
-                <p><a href="#">【广州幕墙展】2016工程设计热点话题，你不可不知！</a></p>
+    <div id="index_main_container">
+        <!-- 新闻部分 -->
+        <div id="news_part">
+            <p><span>新闻中心</span><a href="{:U('News/newslist')}">更多&gt;&gt;</a></p>
+            <div class="picture_and_title">
+                <volist id="newsPicture" name="newsPicture">
+                    <div class="news_picture">
+                        <span>
+                            <a href="{:U('News/news',array('id'=>$newsPicture['news_id']))}"><img src="__ROOT__/{$newsPicture.picture}"></a>
+                        </span>
+                    
+                    <div class="news_title">
+                        <a href="{:U('News/news',array('id'=>$newsPicture['news_id']))}">{$newsPicture.title}</a>
+                    </div></div>
+                </volist>
             </div>
-       	</div>
-    </div>
-    <div class="columnbox">
-    	<div class="column">
-        	<div class="columntitlebox">
-            	<div class="columntitle">新闻动态</div>
-                <div class="columntitle">新品展示</div>
-                <div class="columntitle">典型案例</div>
-                <div class="columntitle">下载中心</div>
-            </div>
-            <div class="columnmain">
-    			<div class="columntext">
-                	<h1>业内资讯 • • • • • • • • • • • •</h1>
-                    <a href="news.html"><img src="__PUBLIC__/images/more.png"></a>
-                </div>
-                <div class="columnline"><img src="__PUBLIC__/images/line2.png"></div>
-                <div class="columntext">
-                	<h1>市场动态 • • • • • • • • • • • •</h1>
-                    <a href=""><img src="__PUBLIC__/images/more.png"></a>
-                </div>
-                <div class="columnline"><img src="__PUBLIC__/images/line2.png"></div>
-                <div class="columnpicture">
-                	<span>
-                    	<img src="__PUBLIC__/images/column.png">
-                    	<img src="__PUBLIC__/images/column2.png">
-                    	<img src="__PUBLIC__/images/column3.png">
-                    </span>
-                    <div class="columnbtnbox">
-                    	<div class="columnbtn">1</div>
-                        <div class="columnbtn">2</div>
-                        <div class="columnbtn">3</div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="columnmain">2</div>
-            <div class="columnmain">3</div>
-            <div class="columnmain">4</div>
-            
+            <ul>
+                <volist id="newsInfo" name="newsInfo">
+                    <li><a href="{:U('News/news',array('id'=>$newsInfo['news_id']))}">{$newsInfo.title}</a></li>
+                </volist>
+            </ul>
         </div>
+        <!-- 四图文 -->
+        <ul id="index_four_part">
+            <li>
+                <h2>专家团队</h2>
+                <div>
+                    <img src="__PUBLIC__/images/专家团队.jpg" alt="">
+                </div>
+                <ul class="four_part_tip">
+                    <li><a href="{:U('Expert/expertlist')}">专家信息</a></li>
+                    <li><a href="{:U('Team/teamlist')}">团队信息</a></li>
+                </ul>
+            </li>
+            <li>
+                <h2>科技成果</h2>
+                <div>
+                    <img src="__PUBLIC__/images/专家团队.jpg" alt="">
+                </div>
+                <ul class="four_part_tip">
+                    <li><a href="{:U('Result/resultlist')}">成果集锦</a></li>
+                    <?php if (session('uid')): ?>
+                        <li><a href="{:U('Result/add')}">成果发布</a></li>
+                    <?php else: ?>
+                        <li><a href="{:U('Public/login')}">成果发布</a></li>
+                    <?php endif ?>
+                </ul>
+            </li>
+            <li>
+                <h2>企业需求</h2>
+                <div>
+                    <img src="__PUBLIC__/images/专家团队.jpg" alt="">
+                </div>
+                <ul class="four_part_tip">
+                    <li><a href="{:U('Demand/demandlist')}">需求集锦</a></li>
+                    <?php if(session('uid')): ?>
+                        <?php if(session('type') == 2):?>
+                          <li><a href="{:U('Demand/add')}">需求发布</a></li>
+                        <?php else: ?>
+                            <li><a href="javascript:void(0);" onclick="waring()">需求发布</a></li>
+                        <?php endif ?>
+                    <?php else: ?>
+                        <li><a href="{:U('Public/login')}">需求发布</a></li>
+                    <?php endif ?>
+                </ul>
+            </li>
+            <li>
+                <h2>协同管理</h2>
+                <div>
+                    <img src="__PUBLIC__/images/专家团队.jpg" alt="">
+                </div>
+                <ul class="four_part_tip">
+                    <li><a href="{:U('Cooperation/index',array('type'=>3))}">协同高校</a></li>
+                    <li><a href="{:U('Cooperation/index',array('type'=>1))}">行业协会</a></li>
+                    <li><a href="{:U('Cooperation/index',array('type'=>2))}">协同企业</a></li>
+                </ul>
+            </li>
+        </ul>
     </div>
 
     <include file = "Public/footer" />
@@ -194,90 +205,16 @@
             });
         });
         $(function(){
-            $(".columnpicture img").hide().first().fadeIn();
-            $(".columnbtn").first().addClass('columnpicture_hover');
+            $(".news_picture").hide().first().fadeIn();
             var y=0
             var z=setInterval(function(){
-                y=y+1;
-                if(y==3){y=0;}
-                $(".columnpicture img").eq(y).fadeIn().siblings().fadeOut();
-                $(".columnbtn").eq(y).addClass('columnpicture_hover').siblings().removeClass('columnpicture_hover')
+                if(++y==5){y=0;}
+                $(".news_picture").eq(y).fadeIn().siblings().fadeOut();
             },5000);
-            $(".columnbtn").mouseenter( function(){
-                $(this).addClass('columnpicture_hover').siblings().removeClass('columnpicture_hover')
-            });
-            $(".columnbtn").mouseenter( function(){
-                y=$(this).index();
-                $(".columnpicture img").eq(y).fadeIn().siblings().fadeOut();
-            });
-            $(".columnpicture").mouseenter(function(){
-                clearInterval(z);
-            })
-            .mouseleave(function(){
-                z=setInterval(function(){
-                    y=y+1;
-                    if(y==3){y=0;}
-                    $(".columnpicture img").eq(y).fadeIn().siblings().fadeOut();
-                    $(".columnbtn").eq(y).addClass('columnpicture_hover').siblings().removeClass('columnpicture_hover');
-                },5000);
-            });
-
-
-            var i=0;
-            var m=setInterval(function(){
-                i=i+1;
-                if(i==$(".newstext p").length){
-                    i=1;
-                    $(".newstext").css("margin-top","0")
-                    $(".newstext").animate({marginTop:-37*i},1000)
-                }
-                $(".newstext").animate({marginTop:-37*i},1000)
-            },5000);
-
-            $(".news").mouseenter(
-                function(){
-                    clearInterval(m);
-            })
-            .mouseleave(function(){
-                m=setInterval(function(){
-                    i=i+1;
-                    if(i==$(".newstext p").length){
-                        i=1;
-                        $(".newstext").css("margin-top","0");
-                        $(".newstext").animate({marginTop:-37*i},1000);
-                    }
-                    $(".newstext").animate({marginTop:-37*i},1000);
-                },5000)
-            });
-
-
-
-            $(".columnmain").hide().first().show();
-            $(".columntitle").first().addClass("columntitleclick");
-            $(".columntitle").mouseenter(function(){
-                $(this).addClass("columntitlemouseenter")
-            })
-            .mouseleave(function(){
-                $(this).removeClass("columntitlemouseenter");
-            });
-            $(".columntitle").click(function(){
-                $(this).addClass("columntitleclick").siblings().removeClass("columntitleclick")
-                $(".columnmain").hide().eq($(this).index()).show()
-            });
-            $(".columntext p a").mouseenter(function(){
-                $(this).css("color","#666")
-            })
-            .mouseleave(function(){
-                $(this).css("color","#333")
-            });
-            $(".smallnav a").mouseenter(function(){
-                $(this).css("color","#999");
-            })
-            .mouseleave(function(){
-                $(this).css("color","#6f6f6f")
-            });
         });
-       
+		function waring(){
+			alert("只有企业用户才能发布需求");
+		}
     </script>
 </body>
 </html>
