--- a/Application/Home/View/Public/footer.html
+++ b/Application/Home/View/Public/footer.html
@@ -1,4 +1,4 @@
-<div id="footerbox">
+<!-- <div id="footerbox">
 	<div id="footer">
         <div id="footerlist">
             <a href="__ROOT__"><h1>网站首页</h1></a>
@@ -34,10 +34,10 @@
         </div> 
         <img src="__PUBLIC__/images/erweima_05.png">
     </div>
-</div>
+</div> -->
 <div id="bottombox">
 	<div id="bottom">
-    	<p>copyright:&copy;江苏科技大学 </p>
+    	<p>copyright:&copy;江苏科技大学&江苏科技大学苏州理工学院</p>
         <p>order by <a href="javascript:void(0);" onclick="toMaster()">cm&xj</a></p>
         <script>
             function toMaster() {
