--- a/Application/Home/View/Public/nav.html
+++ b/Application/Home/View/Public/nav.html
@@ -21,14 +21,14 @@
     <div class="nav">
         <div class="nav-tip" id="nav_index">
             <a href="{:U('Index/index')}">网站首页</a>
-            <div class="nav-list">
+            <!-- <div class="nav-list">
                 <p>
                     <a href="{:U('Public/aboutus')}">平台介绍</a>
                 </p>
-            </div>
+            </div> -->
         </div>       
         <div class="nav-tip" id="nav_news">
-            <a href="{:U('News/newslist')}">信息咨询</a>
+            <a href="{:U('News/newslist')}">信息资讯</a>
             <div class="nav-list">
                 <p>
                     <a href="{:U('News/newslist',array('type'=>3))}">政策法规</a>
