--- a/Application/Master/View/News/add_modify.html
+++ b/Application/Master/View/News/add_modify.html
@@ -29,6 +29,15 @@
 			height: 27px;
 			line-height: 27px;
 		}
+		.upload{
+		    width:300px;
+		    max-height: 200px;
+		    /*margin:0 auto;*/
+		}
+		#preview{
+		    max-width:300px;
+		    max-height: 200px;
+		}
 	</style>
 </head>
 
@@ -51,7 +60,14 @@
 						<option value="2">业内资讯</option>
 					</select>
 				</div>
-			</div>			
+			</div>
+			<div class="form-group">
+				<label class="col-xs-2 control-label" for="news_picture">资讯图片:</label>
+				<div class="col-xs-10">
+					<input  type="file" name="news_picture" id="news_picture"  value="只能上传一张图">
+					<div class="upload"><img id="preview" src="__ROOT__/{$picture}" alt=""></div>
+				</div>
+			</div>		
 			<div class="form-group">
 				<label class="col-xs-2 control-
 				" for="content" style="text-align:right">正文:</label>
@@ -83,14 +99,41 @@
 	<js href="__PUBLIC__/ueditor/ueditor.config.js" />
 	<js href="__PUBLIC__/ueditor/ueditor.all.min.js" />
 	<script type="text/javascript">
+		var imgObj = document.getElementById("preview");
+		if(imgObj.getAttribute('src') == "__ROOT__/"){
+			imgObj.setAttribute("src","");
+		}
+
 		$(document).ready(function() {
 			window.UEDITOR_CONFIG.initialFrameHeight = $(document).width()*0.3;
 			window.UEDITOR_CONFIG.initialFrameWidth = $(document).width()*0.7;
-			window.UEDITOR_CONFIG.toolbars = [['fullscreen', 'customstyle', 'paragraph', 'fontfamily', 'fontsize', '|', 'undo', 'redo', '|', 'bold', 'italic', 'underline', 'fontborder', 'strikethrough', 'superscript', 'subscript', 'removeformat', 'formatmatch', 'autotypeset', 'pasteplain', '|', 'forecolor', 'backcolor', 'insertorderedlist', 'insertunorderedlist', 'selectall', 'cleardoc', '|', 'rowspacingtop', 'rowspacingbottom', 'lineheight', '|', 'indent', '|', 'justifyleft', 'justifycenter', 'justifyright', 'justifyjustify', '|', 'link', 'unlink', '|', 'imagenone', 'imageleft', 'imageright', 'imagecenter', '|', 'simpleupload', 'insertimage', 'attachment', 'pagebreak', 'background', '|', 'horizontal', 'date', 'time', 'wordimage', '|', 'inserttable', 'deletetable', 'insertparagraphbeforetable', 'insertrow', 'deleterow', 'insertcol', 'deletecol', 'mergecells', 'mergeright', 'mergedown', 'splittocells', 'splittorows', 'splittocols', 'charts', '|', 'prng eview', 'searchreplace']];
+			window.UEDITOR_CONFIG.toolbars = [['fullscreen', 'customstyle', 'paragraph', 'fontfamily', 'fontsize', '|', 'undo', 'redo', '|', 'bold', 'italic', 'underline', 'fontborder', 'strikethrough', 'superscript', 'subscript', 'removeformat', 'formatmatch', 'autotypeset', 'pasteplain', '|', 'forecolor', 'backcolor', 'insertorderedlist', 'insertunorderedlist', 'selectall', 'cleardoc', '|', 'rowspacingtop', 'rowspacingbottom', 'lineheight', '|', 'indent', '|', 'justifyleft', 'justifycenter', 'justifyright', 'justifyjustify', '|', 'link', 'unlink',/* '|', 'imagenone', 'imageleft', 'imageright', 'imagecenter', '|', 'simpleupload', 'insertimage', 'attachment', 'pagebreak', 'background',*/ '|', 'horizontal', 'date', 'time', /*'wordimage', */'|', 'inserttable', 'deletetable', 'insertparagraphbeforetable', 'insertrow', 'deleterow', 'insertcol', 'deletecol', 'mergecells', 'mergeright', 'mergedown', 'splittocells', 'splittorows', 'splittocols', 'charts', '|', 'prng eview', 'searchreplace']];
 			window.UEDITOR_CONFIG.elementPathEnabled = false;
 			window.UEDITOR_CONFIG.maximumWords = 1000;
 			var ue = UE.getEditor('content',{serverUrl :'{:U('Master/Index/ueditor')}'});
-			
+		});	
+		$(function(){
+			$('#news_picture').change(function(event) {
+		        event.preventDefault();
+		        var $file = $(this);
+		        var fileObj = $file[0];
+		        var windowURL = window.URL || window.webkitURL;
+		        if(fileObj && fileObj.files && fileObj.files[0]){
+		            var path = windowURL.createObjectURL(fileObj.files[0]);
+		            $('#preview').attr('src',path);
+		        }else{
+		            console.log($file.val());
+		            var dataURL = $file.val();
+		            // 两个坑:
+		            // 1、在设置filter属性时，元素必须已经存在在DOM树中，动态创建的Node，也需要在设置属性前加入到DOM中，先设置属性在加入，无效；
+		            // 2、src属性需要像下面的方式添加，上面的两种方式添加，无效；
+		            imgObj.style.filter = "progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod=scale);max-width:200px;";
+		            // imgObj.filters.item("DXImageTransform.Microsoft.AlphaImageLoader").src = dataURL;
+		            // imgObj.setAttribute("max-width",'200px');
+		            console.log("ie");
+		            imgObj.setAttribute("src",dataURL);
+		    	}
+    		});
 		});
 	</script>
 </body>
