--- a/Public/css/home/cooperation.css
+++ b/Public/css/home/cooperation.css
@@ -3,6 +3,9 @@
 	padding: 0;
 	font-weight: normal;
 }
+a{
+	color: #2c2cef;
+}
 #main{
 	width: 1000px;
 	min-height: 600px;
@@ -52,14 +55,20 @@
 	font-size: 12px;
 	color: #666;
 }
-.right_content>pre{
+#news_content{
+	width: 100%;
 	margin: 10px 5px;
-	min-height: 300px;
+	min-height: 400px;
 	color: #1D251C;
 	text-align: left;
 	font-family: simsun;
-	font-size: 12px;
+	font-size: 14px;
 	line-height: 20px;
+	color: #000;
+}
+#news_content>img{
+	float: left;
+	margin: 10px 20px 10px 10px;
 }
 .next p{
 	margin: 10px 0;
