--- a/Public/css/home/nav.css
+++ b/Public/css/home/nav.css
@@ -124,7 +124,8 @@ a{
 }
 #bottombox{
 	width: 100%;
-	height: 30px;
+	border-top: 1px solid #ddd;
+	padding-top: 15px;
 }
 #bottom{
 	width: 1100px;
@@ -133,6 +134,7 @@ a{
 }
 #bottom p{
 	font-size: 12px;
+	line-height: 20px;
 }
 #bottom a{
 	color: #000;
