--- a/Application/Home/View/Expert/expert.html
+++ b/Application/Home/View/Expert/expert.html
@@ -114,7 +114,7 @@
                             <button onclick="waring()">邀请加入团队</button>
                         <?php endif ?>
                     <?php else: ?>
-                        <a href="{:U('Public/login')}">
+                        <a onclick="showLogin()">
                             <button>我要联系</button>
                             <button>邀请加入团队</button>
                         </a>
