--- a/Application/Home/View/Expert/expertlist.html
+++ b/Application/Home/View/Expert/expertlist.html
@@ -150,7 +150,7 @@
                                     <button onclick="waring()">邀请加入团队</button>
                                 <?php endif ?>
                             <?php else: ?>
-                                <a href="{:U('Public/login')}" target="_black">
+                                <a onclick="showLogin()">
                                     <button>我要联系</button><br>
                                     <button>邀请加入团队</button>
                                 </a>
