--- a/Application/Home/View/Result/result.html
+++ b/Application/Home/View/Result/result.html
@@ -75,7 +75,7 @@
                             <button>我要联系</button>
                         </a>
                     <?php else: ?>
-                        <a href="{:U('Public/login')}" target="_black">
+                        <a  onclick="showLogin()">
                             <button>我要联系</button>
                         </a>
                     <?php endif ?>
