--- a/Application/Home/View/Result/resultlist.html
+++ b/Application/Home/View/Result/resultlist.html
@@ -56,7 +56,7 @@
                         <img src="__PUBLIC__/images/add_research.png" alt="">
                     </a>          
                 <?php else: ?>
-                    <a href="{:U('Public/login')}">
+                    <a  onclick="showLogin()">
                         <img src="__PUBLIC__/images/add_research.png" alt="">
                     </a>
                 <?php endif ?>                    
@@ -105,7 +105,7 @@
                                 <button>我要联系</button>
                             </a>
                         <?php else: ?>
-                            <a id="linkbutton" href="{:U('Public/login')}" target="_black">
+                            <a id="linkbutton"  onclick="showLogin()">
                                 <button>我要联系</button>
                             </a>
                         <?php endif ?>
