--- a/Application/Home/View/Team/teamlist.html
+++ b/Application/Home/View/Team/teamlist.html
@@ -101,7 +101,7 @@
                             </a>                       
                         <?php endif ?>                    
                     <?php else: ?>
-                        <a href="{:U('Public/login')}">
+                        <a  onclick="showLogin()">
                             <img src="__PUBLIC__/images/add_team.png" alt="">
                         </a>
                     <?php endif ?>                    
@@ -167,7 +167,7 @@
                                 <button>我要联系</button>
                             </a>
                         <?php else: ?>
-                            <a href="{:U('Public/login')}" target="_black">
+                            <a  onclick="showLogin()">
                                 <button>我要联系</button>
                             </a>
                         <?php endif ?>
