--- a/Public/css/home/index.css
+++ b/Public/css/home/index.css
@@ -1,4 +1,11 @@
-*{	
+a, abbr, acronym, address, applet, article, aside, audio, b,body, 
+canvas, caption, cite, code,datalist, dd, del, details, dl, div, dt, 
+em, embed, fieldset,footer, form, 
+h1, h2, h3, h4, h5, h6, header, html, 
+i, iframe, img, label, legend, li, 
+meter, nav, object, ol, output, p, pre, progress, q, 
+s, samp, section, small, span, source, strike, strong, sub, sup, 
+table, tbody, tfoot, thead, th, tr, tt, u, ul{	
 	margin: 0;	
 	padding: 0;
 }
@@ -6,6 +13,8 @@
 body{ 
 	font-size:12px;
 	font-family:"微软雅黑"; 
+	width: 100%;
+	height: 100%;
 }
 
 a{ 
