--- a/Public/css/home/nav.css
+++ b/Public/css/home/nav.css
@@ -1,13 +1,24 @@
 /*  create by cm  */
-*{
+a, abbr, acronym, address, applet, article, aside, audio, b,body, 
+canvas, caption, cite, code,datalist, dd, del, details, dl, div, dt, 
+em, embed, fieldset,footer, form, 
+h1, h2, h3, h4, h5, h6, header, html, 
+i, iframe, img, label, legend, li, 
+meter, nav, object, ol, output, p, pre, progress, q, 
+s, samp, section, small, span, source, strike, strong, sub, sup, 
+table, tbody, tfoot, thead, th, tr, tt, u, ul{
 	margin: 0;
 	padding: 0;
-	font-family:"微软雅黑"; 
-	/*box-sizing:border-box;*/
+}
+html,body{
+	font-family:"microsoft Yahei"; 
+	width: 100%;
+	height: 100%;
 }
 
 a{
 	text-decoration: none;
+	cursor: pointer;
 }
 .topbox{
 	width: 100%;
@@ -90,12 +101,109 @@ a{
 }
 
 
-#footerbox{ 
+
+/* 登录窗 */
+#login_bg{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(80,80,80,0.5);
+	transition: all 0.3s linear;
+}
+.login_show{
+	z-index: 999;
+	opacity: 1;
+}
+.login_hidden{
+	z-index: -1;
+	opacity: 0;
+}
+#login_container{
+	width: 700px;
+	height: 456px;
+	margin: 0 auto;
+	margin-top: 150px;
+	background: url(../../images/login_page.png);
+	position: relative;
+}
+#login_form{
+	width: 350px;
+	height: 280px;
+	position: absolute;
+	top: 30px;
+	left: 300px;
+	text-align: center;
+}
+#login_form .input_text{
+	margin: 40px 0 20px 0;
+}
+#login_form input{
+    height: 40px;
+    width: 300px;
+    font-size: 18px;
+    margin: 5px 0;
+    padding-left: 25px;
+}
+#txt_userName{
+    background: #fff url(../../images/user.jpg) no-repeat 2% center;
+}
+#pwd_userPwd{
+    background: #fff url(../../images/pwd.jpg) no-repeat 2% center;
+}
+
+/* 登陆和注册模块 */
+#login_btns{
+	margin-bottom: 5px;
+}
+#login_btns>button,#signup-btn{
+    border: none;
+    height: 45px;
+    line-height: 45px;
+    width: 135px;
+    color: #fff;
+	font-size: 20px;
+	font-weight: bold;
+	font-family: "microsoft Yahei";
+	background-image: linear-gradient(to bottom,#5dc3fe,#0574c1);
+	border-radius: 5px;
+	cursor: pointer;
+}
+#signup-btn{
+    display: inline-block;
+    margin-left: 20px;
+}
+#login_btns>button:hover,#signup-btn:hover{
+	background: #0574c1;
+}
+#forgetpwd{
+    float: right;
+    font-size: 14px;
+    color: #234;
+}
+#login_close{
+	position: absolute;
+	text-align: center;
+	width: 24px;
+	height: 24px;
+	border: 2px solid #000;
+	border-radius: 50%;
+	top: -12px;
+	right: -12px;
+	cursor: pointer;
+	font-size: 20px;
+	background: #fff;
+}
+#login_close:hover{
+	background: #ddd;
+	color: #fff;
+}
+
+/* #footerbox{ 
 	width: 100%;
 	min-width: 1100px;
 	background-image:url(../../images/footerbackground.png);
-/*	position: fixed;
-	bottom: 40px;*/
 }
 #footer{
 	width:1100px;
@@ -121,7 +229,7 @@ a{
 	margin-top:27px; 
 	float:right; 
 	margin-left:15px;
-}
+} */
 #bottombox{
 	width: 100%;
 	border-top: 1px solid #ddd;
