--- a/Application/Home/View/Public/person_nav.html
+++ b/Application/Home/View/Public/person_nav.html
@@ -1,9 +1,9 @@
     <div id="header">
     	<div id="header_box">
-    		<a href="__ROOT__">
+    		<a href="{:U('Index/index')}">
     			<img src="__PUBLIC__/images/background.png" alt="">
     		</a>
-    		<a class="index" href="__ROOT__">回到首页</a>
+    		<a class="index" href="{:U('Index/index')}">回到首页</a>
     	</div>
     <!-- create by cm -->
     </div>
