--- a/Public/css/home/nav.css
+++ b/Public/css/home/nav.css
@@ -110,6 +110,8 @@ a{
 	width: 100%;
 	height: 100%;
 	background: rgba(80,80,80,0.5);
+	-webkit-transition: all 0.3s linear;
+	-o-transition: all 0.3s linear;
 	transition: all 0.3s linear;
 }
 .login_show{
